# hse_huffman_archiver

src/: CMakeLists.txt  archivator.cpp  archivator.h  archiver.cpp  constants.h  filereader.cpp  filereader.h  filewriter.cpp  filewriter.h  huffman.cpp  huffman.h  huffman_node.h  myparser.cpp  myparser.h  parserexception.h  queue_min.h  queuenode.cpp  queuenode.h  unarchivator.cpp  unarchivator.h
tests/data/: meme.arc  my_new_lines.arc
tests/data/new_lines/: z.arc
