add_executable(
        archiver
        archiver.cpp
        huffman.h huffman_node.h huffman.cpp queue_min.h constants.h filewriter.h archivator.h archivator.cpp filewriter.cpp unarchivator.h unarchivator.cpp filereader.h filereader.cpp queuenode.h queuenode.cpp parserexception.h myparser.h myparser.cpp)
